--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <ul>
-        <li><a href="/test01/index.html">테스트1</a></li>
+        <li><a href="./test01/index.html">테스트1</a></li>
     </ul>
 </body>
 
