--- a/test01/index.html
+++ b/test01/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>포트폴리오 test</title>
+    <title>포트폴리오01</title>
     <link rel="stylesheet" type="text/css" href="./common/css/common.css" />
     
     <script type='text/javascript' src="./common/js/swiper.js"></script>
@@ -12,7 +12,14 @@
     <script type='text/javascript' src='./common/js/common.js'></script>
 </head>
 <body>
-    
+    <header class="header">
+        <ul class="gnb">
+            <li><a href="" class="montserrat">ABOUT</a></li>
+            <li><a href="" class="montserrat">SKILLS</a></li>
+            <li><a href="" class="montserrat">PROJECT</a></li>
+            <li><a href="" class="montserrat">CONTACT</a></li>
+        </ul>
+    </header>
 </body>
 
 <script type='text/javascript' src='./common/js/css3-animate.js'></script>
