--- a/test01/index.html
+++ b/test01/index.html
@@ -1,27 +1,186 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>포트폴리오01</title>
     <link rel="stylesheet" type="text/css" href="./common/css/common.css" />
-    
-    <script type='text/javascript' src="./common/js/swiper.js"></script>
-    <script type='application/json' src="./common/js/swiper.js.map"></script>
-    <script type='text/javascript' src='./common/js/common.js'></script>
-</head>
-<body>
-    <header class="header">
-        <ul class="gnb">
-            <li><a href="" class="montserrat">ABOUT</a></li>
-            <li><a href="" class="montserrat">SKILLS</a></li>
-            <li><a href="" class="montserrat">PROJECT</a></li>
-            <li><a href="" class="montserrat">CONTACT</a></li>
-        </ul>
-    </header>
-</body>
 
-<script type='text/javascript' src='./common/js/css3-animate.js'></script>
-<script type='text/javascript' src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+    <script type="text/javascript" src="./common/js/swiper.js"></script>
+    <script type="application/json" src="./common/js/swiper.js.map"></script>
+    <script type="text/javascript" src="./common/js/common.js"></script>
+  </head>
+  <header class="header">
+    <ul class="gnb">
+      <li><a href="" class="montserrat">ABOUT</a></li>
+      <li><a href="" class="montserrat">SKILLS</a></li>
+      <li><a href="" class="montserrat">PROJECT</a></li>
+      <li><a href="" class="montserrat">CONTACT</a></li>
+    </ul>
+  </header>
+
+  <body>
+    <form
+      id="emailForm"
+      class="gform"
+      method="POST"
+      action="https://script.google.com/macros/s/AKfycbxO5vlJUOa9UoljaKBxmeVAsC-uG9cugK0NHG8zApDyd642wZEtn5wGTdLK1v2pad0axg/exec"
+    >
+      <input
+        type="text"
+        class="form-control"
+        id="senderEmail"
+        name="senderEmail"
+        placeholder="Your Email"
+        required
+      />
+      <input
+        type="text"
+        class="form-control"
+        id="senderName"
+        name="senderName"
+        placeholder="Your Name"
+        required
+      />
+      <textarea
+        class="form-control"
+        id="message"
+        name="message"
+        rows="5"
+        placeholder="Your Message"
+      ></textarea>
+
+      <script type="text/javascript">
+        (function () {
+          // get all data in form and return object
+          function getFormData(form) {
+            var elements = form.elements;
+            var honeypot;
+
+            var fields = Object.keys(elements)
+              .filter(function (k) {
+                if (elements[k].name === "honeypot") {
+                  honeypot = elements[k].value;
+                  return false;
+                }
+                return true;
+              })
+              .map(function (k) {
+                if (elements[k].name !== undefined) {
+                  return elements[k].name;
+                  // special case for Edge's html collection
+                } else if (elements[k].length > 0) {
+                  return elements[k].item(0).name;
+                }
+              })
+              .filter(function (item, pos, self) {
+                return self.indexOf(item) == pos && item;
+              });
+
+            var formData = {};
+            fields.forEach(function (name) {
+              var element = elements[name];
+
+              // singular form elements just have one value
+              formData[name] = element.value;
+
+              // when our element has multiple items, get their values
+              if (element.length) {
+                var data = [];
+                for (var i = 0; i < element.length; i++) {
+                  var item = element.item(i);
+                  if (item.checked || item.selected) {
+                    data.push(item.value);
+                  }
+                }
+                formData[name] = data.join(", ");
+              }
+            });
+
+            // add form-specific values into the data
+            formData.formDataNameOrder = JSON.stringify(fields);
+            formData.formGoogleSheetName = form.dataset.sheet || "responses"; // default sheet name
+            formData.formGoogleSendEmail = form.dataset.email || ""; // no email by default
+
+            return { data: formData, honeypot: honeypot };
+          }
+
+          function handleFormSubmit(event) {
+            // handles form submit without any jquery
+            event.preventDefault(); // we are submitting via xhr below
+            var form = event.target;
+            var formData = getFormData(form);
+            var data = formData.data;
+
+            // If a honeypot field is filled, assume it was done so by a spam bot.
+            if (formData.honeypot) {
+              return false;
+            }
+
+            disableAllButtons(form);
+            var url = form.action;
+            var xhr = new XMLHttpRequest();
+            xhr.open("POST", url);
+            // xhr.withCredentials = true;
+            xhr.setRequestHeader(
+              "Content-Type",
+              "application/x-www-form-urlencoded"
+            );
+            xhr.onreadystatechange = function () {
+              if (xhr.readyState === 4 && xhr.status === 200) {
+                form.reset();
+                var formElements = form.querySelector(".form-elements");
+                if (formElements) {
+                  formElements.style.display = "none"; // hide form
+                }
+                var thankYouMessage = form.querySelector(".thankyou_message");
+                if (thankYouMessage) {
+                  thankYouMessage.style.display = "block";
+                  alert("메일 전송에 성공했습니다. 확인 후 회신드리겠습니다.");
+                }
+              }
+            };
+            // url encode form data for sending as post data
+            var encoded = Object.keys(data)
+              .map(function (k) {
+                return (
+                  encodeURIComponent(k) + "=" + encodeURIComponent(data[k])
+                );
+              })
+              .join("&");
+            xhr.send(encoded);
+          }
+
+          function loaded() {
+            // bind to the submit event of our form
+            var forms = document.querySelectorAll("form.gform");
+            for (var i = 0; i < forms.length; i++) {
+              forms[i].addEventListener("submit", handleFormSubmit, false);
+            }
+          }
+          document.addEventListener("DOMContentLoaded", loaded, false);
+
+          function disableAllButtons(form) {
+            var buttons = form.querySelectorAll("button");
+            for (var i = 0; i < buttons.length; i++) {
+              buttons[i].disabled = true;
+            }
+          }
+        })();
+      </script>
+      <button id="btnSubmit" class="btn-submit mt-2">Send Message</button>
+      <div style="display: none" class="thankyou_message">
+        <h2>
+          <em>Thanks</em> for contacting us! We will get back to you soon!
+        </h2>
+      </div>
+    </form>
+  </body>
+
+  <script type="text/javascript" src="./common/js/css3-animate.js"></script>
+  <script
+    type="text/javascript"
+    src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"
+  ></script>
 </html>
