--- a/test01/index.html
+++ b/test01/index.html
@@ -7,6 +7,7 @@
     <title>포트폴리오01</title>
     <link rel="stylesheet" type="text/css" href="./common/css/common.css" />
 
+    <script src="//code.jquery.com/jquery-3.4.1.min.js"></script>
     <script type="text/javascript" src="./common/js/swiper.js"></script>
     <script type="application/json" src="./common/js/swiper.js.map"></script>
     <script type="text/javascript" src="./common/js/common.js"></script>
@@ -31,6 +32,13 @@
         <a href=""></a>
       </li>
     </ul>
+    <button></button>
+
+    <script>
+      $(function () {
+        $("button").click(function () {});
+      });
+    </script>
 
     <div class="contactForm">
       <form
