--- a/test01/index.html
+++ b/test01/index.html
@@ -22,186 +22,231 @@
   </header>
 
   <body>
-    <ul>
-      <li>
-        <figure>
-          <img src="" alt="" />
-        </figure>
-        <h2></h2>
-        <p></p>
-        <a href=""></a>
-      </li>
-    </ul>
-    <button></button>
+    <section class="section02">
+      <ul class="projectList">
+        <li>
+          <figure>
+            <img src="element.jpg" alt="추가전 내용" />
+          </figure>
+          <h2>추가전 내용</h2>
+          <p>추가전 내용</p>
+          <a href="">링크 이동</a>
+        </li>
+        <li>
+          <figure>
+            <img src="element.jpg" alt="추가전 내용" />
+          </figure>
+          <h2>추가전 내용</h2>
+          <p>추가전 내용</p>
+          <a href="">링크 이동</a>
+        </li>
+      </ul>
+      <button type="button" id="addBtn">더보기</button>
 
-    <script>
-      $(function () {
-        $("button").click(function () {});
-      });
-    </script>
+      <script type="module">
+        import dataName from "./ajax.js";
 
-    <div class="contactForm">
-      <form
-        id="emailForm"
-        class="gform"
-        method="POST"
-        action="https://script.google.com/macros/s/AKfycbxO5vlJUOa9UoljaKBxmeVAsC-uG9cugK0NHG8zApDyd642wZEtn5wGTdLK1v2pad0axg/exec"
-      >
-        <input
-          type="text"
-          class="form-control"
-          id="senderEmail"
-          name="senderEmail"
-          placeholder="Your Email"
-          required
-        />
-        <input
-          type="text"
-          class="form-control"
-          id="senderName"
-          name="senderName"
-          placeholder="Your Name"
-          required
-        />
-        <textarea
-          class="form-control"
-          id="message"
-          name="message"
-          rows="5"
-          placeholder="Your Message"
-        ></textarea>
+        let page = 0;
+        const pageSize = 6;
+        const jsonData = [...dataName]; // 불러온 JSON 데이터
+        console.log("jsonData: ", jsonData);
 
-        <script type="text/javascript">
-          (function () {
-            // get all data in form and return object
-            function getFormData(form) {
-              var elements = form.elements;
-              var honeypot;
+        function onAddList() {
+          if (Math.ceil(jsonData.length / pageSize) < page + 1) {
+            return;
+          }
 
-              var fields = Object.keys(elements)
-                .filter(function (k) {
-                  if (elements[k].name === "honeypot") {
-                    honeypot = elements[k].value;
-                    return false;
+          if (Math.ceil(jsonData.length / pageSize) === 0) {
+            return;
+          }
+
+          jsonData.forEach((element, index) => {
+            if (index >= page * 6 && (page + 1) * 6 > index) {
+              document.querySelector(".projectList").innerHTML += `
+                    <li>
+                        <figure>
+                            <img src="${element.img}" alt="${element.subject}">
+                        </figure>
+                        <h2>${element.subject}${index}</h2>
+                        <p>${element.subtxt}</p>
+                        <a href="${element.link}">링크 이동</a>
+                    </li>
+                `;
+            }
+          });
+          page += 1;
+        }
+
+        document.getElementById("addBtn").addEventListener("click", onAddList);
+      </script>
+    </section>
+
+    <section class="section03">
+      <div class="contactForm">
+        <form
+          id="emailForm"
+          class="gform"
+          method="POST"
+          action="https://script.google.com/macros/s/AKfycbxO5vlJUOa9UoljaKBxmeVAsC-uG9cugK0NHG8zApDyd642wZEtn5wGTdLK1v2pad0axg/exec"
+        >
+          <input
+            type="text"
+            class="form-control"
+            id="senderEmail"
+            name="senderEmail"
+            placeholder="Your Email"
+            required
+          />
+          <input
+            type="text"
+            class="form-control"
+            id="senderName"
+            name="senderName"
+            placeholder="Your Name"
+            required
+          />
+          <textarea
+            class="form-control"
+            id="message"
+            name="message"
+            rows="5"
+            placeholder="Your Message"
+          ></textarea>
+
+          <script type="text/javascript">
+            (function () {
+              // get all data in form and return object
+              function getFormData(form) {
+                var elements = form.elements;
+                var honeypot;
+
+                var fields = Object.keys(elements)
+                  .filter(function (k) {
+                    if (elements[k].name === "honeypot") {
+                      honeypot = elements[k].value;
+                      return false;
+                    }
+                    return true;
+                  })
+                  .map(function (k) {
+                    if (elements[k].name !== undefined) {
+                      return elements[k].name;
+                      // special case for Edge's html collection
+                    } else if (elements[k].length > 0) {
+                      return elements[k].item(0).name;
+                    }
+                  })
+                  .filter(function (item, pos, self) {
+                    return self.indexOf(item) == pos && item;
+                  });
+
+                var formData = {};
+                fields.forEach(function (name) {
+                  var element = elements[name];
+
+                  // singular form elements just have one value
+                  formData[name] = element.value;
+
+                  // when our element has multiple items, get their values
+                  if (element.length) {
+                    var data = [];
+                    for (var i = 0; i < element.length; i++) {
+                      var item = element.item(i);
+                      if (item.checked || item.selected) {
+                        data.push(item.value);
+                      }
+                    }
+                    formData[name] = data.join(", ");
                   }
-                  return true;
-                })
-                .map(function (k) {
-                  if (elements[k].name !== undefined) {
-                    return elements[k].name;
-                    // special case for Edge's html collection
-                  } else if (elements[k].length > 0) {
-                    return elements[k].item(0).name;
-                  }
-                })
-                .filter(function (item, pos, self) {
-                  return self.indexOf(item) == pos && item;
                 });
 
-              var formData = {};
-              fields.forEach(function (name) {
-                var element = elements[name];
+                // add form-specific values into the data
+                formData.formDataNameOrder = JSON.stringify(fields);
+                formData.formGoogleSheetName =
+                  form.dataset.sheet || "responses"; // default sheet name
+                formData.formGoogleSendEmail = form.dataset.email || ""; // no email by default
 
-                // singular form elements just have one value
-                formData[name] = element.value;
+                return {
+                  data: formData,
+                  honeypot: honeypot,
+                };
+              }
 
-                // when our element has multiple items, get their values
-                if (element.length) {
-                  var data = [];
-                  for (var i = 0; i < element.length; i++) {
-                    var item = element.item(i);
-                    if (item.checked || item.selected) {
-                      data.push(item.value);
+              function handleFormSubmit(event) {
+                // handles form submit without any jquery
+                event.preventDefault(); // we are submitting via xhr below
+                var form = event.target;
+                var formData = getFormData(form);
+                var data = formData.data;
+
+                // If a honeypot field is filled, assume it was done so by a spam bot.
+                if (formData.honeypot) {
+                  return false;
+                }
+
+                disableAllButtons(form);
+                var url = form.action;
+                var xhr = new XMLHttpRequest();
+                xhr.open("POST", url);
+                // xhr.withCredentials = true;
+                xhr.setRequestHeader(
+                  "Content-Type",
+                  "application/x-www-form-urlencoded"
+                );
+                xhr.onreadystatechange = function () {
+                  if (xhr.readyState === 4 && xhr.status === 200) {
+                    form.reset();
+                    var formElements = form.querySelector(".form-elements");
+                    if (formElements) {
+                      formElements.style.display = "none"; // hide form
+                    }
+                    var thankYouMessage =
+                      form.querySelector(".thankyou_message");
+                    if (thankYouMessage) {
+                      thankYouMessage.style.display = "block";
+                      alert(
+                        "메일 전송에 성공했습니다. 확인 후 회신드리겠습니다."
+                      );
                     }
                   }
-                  formData[name] = data.join(", ");
-                }
-              });
-
-              // add form-specific values into the data
-              formData.formDataNameOrder = JSON.stringify(fields);
-              formData.formGoogleSheetName = form.dataset.sheet || "responses"; // default sheet name
-              formData.formGoogleSendEmail = form.dataset.email || ""; // no email by default
-
-              return {
-                data: formData,
-                honeypot: honeypot,
-              };
-            }
-
-            function handleFormSubmit(event) {
-              // handles form submit without any jquery
-              event.preventDefault(); // we are submitting via xhr below
-              var form = event.target;
-              var formData = getFormData(form);
-              var data = formData.data;
-
-              // If a honeypot field is filled, assume it was done so by a spam bot.
-              if (formData.honeypot) {
-                return false;
-              }
-
-              disableAllButtons(form);
-              var url = form.action;
-              var xhr = new XMLHttpRequest();
-              xhr.open("POST", url);
-              // xhr.withCredentials = true;
-              xhr.setRequestHeader(
-                "Content-Type",
-                "application/x-www-form-urlencoded"
-              );
-              xhr.onreadystatechange = function () {
-                if (xhr.readyState === 4 && xhr.status === 200) {
-                  form.reset();
-                  var formElements = form.querySelector(".form-elements");
-                  if (formElements) {
-                    formElements.style.display = "none"; // hide form
-                  }
-                  var thankYouMessage = form.querySelector(".thankyou_message");
-                  if (thankYouMessage) {
-                    thankYouMessage.style.display = "block";
-                    alert(
-                      "메일 전송에 성공했습니다. 확인 후 회신드리겠습니다."
+                };
+                // url encode form data for sending as post data
+                var encoded = Object.keys(data)
+                  .map(function (k) {
+                    return (
+                      encodeURIComponent(k) + "=" + encodeURIComponent(data[k])
                     );
-                  }
+                  })
+                  .join("&");
+                xhr.send(encoded);
+              }
+
+              function loaded() {
+                // bind to the submit event of our form
+                var forms = document.querySelectorAll("form.gform");
+                for (var i = 0; i < forms.length; i++) {
+                  forms[i].addEventListener("submit", handleFormSubmit, false);
                 }
-              };
-              // url encode form data for sending as post data
-              var encoded = Object.keys(data)
-                .map(function (k) {
-                  return (
-                    encodeURIComponent(k) + "=" + encodeURIComponent(data[k])
-                  );
-                })
-                .join("&");
-              xhr.send(encoded);
-            }
-
-            function loaded() {
-              // bind to the submit event of our form
-              var forms = document.querySelectorAll("form.gform");
-              for (var i = 0; i < forms.length; i++) {
-                forms[i].addEventListener("submit", handleFormSubmit, false);
               }
-            }
-            document.addEventListener("DOMContentLoaded", loaded, false);
+              document.addEventListener("DOMContentLoaded", loaded, false);
 
-            function disableAllButtons(form) {
-              var buttons = form.querySelectorAll("button");
-              for (var i = 0; i < buttons.length; i++) {
-                buttons[i].disabled = true;
+              function disableAllButtons(form) {
+                var buttons = form.querySelectorAll("button");
+                for (var i = 0; i < buttons.length; i++) {
+                  buttons[i].disabled = true;
+                }
               }
-            }
-          })();
-        </script>
-        <button id="btnSubmit" class="btn-submit mt-2">Send Message</button>
-        <div style="display: none" class="thankyou_message">
-          <h2>
-            <em>Thanks</em> for contacting us! We will get back to you soon!
-          </h2>
-        </div>
-      </form>
-    </div>
+            })();
+          </script>
+          <button id="btnSubmit" class="btn-submit mt-2">Send Message</button>
+          <div style="display: none" class="thankyou_message">
+            <h2>
+              <em>Thanks</em> for contacting us! We will get back to you soon!
+            </h2>
+          </div>
+        </form>
+      </div>
+    </section>
   </body>
 
   <script type="text/javascript" src="./common/js/css3-animate.js"></script>
