--- a/test01/index.html
+++ b/test01/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <body>
-    <section class="section02">
+    <section class="section03">
       <ul class="projectList">
         <li>
           <figure>
@@ -49,7 +49,7 @@
         let page = 0;
         const pageSize = 6;
         const jsonData = [...dataName]; // 불러온 JSON 데이터
-        console.log("jsonData: ", jsonData);
+        // console.log("jsonData: ", jsonData);
 
         function onAddList() {
           if (Math.ceil(jsonData.length / pageSize) < page + 1) {
@@ -81,7 +81,7 @@
       </script>
     </section>
 
-    <section class="section03">
+    <section class="section04">
       <div class="contactForm">
         <form
           id="emailForm"
