--- a/test01/index.html
+++ b/test01/index.html
@@ -24,63 +24,38 @@
   </ul>
 </header>
 
-  <body>
-    <section class="section01"></section>
-    <section class="section02"></section>
-    <section class="section03">
-      <ul class="projectList">
-        <li>
-          <figure>
-            <img src="element.jpg" alt="추가전 내용" />
-          </figure>
-          <h2>추가전 내용</h2>
-          <p>추가전 내용</p>
-          <a href="">링크 이동</a>
-        </li>
-        <li>
-          <figure>
-            <img src="element.jpg" alt="추가전 내용" />
-          </figure>
-          <h2>추가전 내용</h2>
-          <p>추가전 내용</p>
-          <a href="">링크 이동</a>
-        </li>
-      </ul>
-      <button type="button" id="addBtn">더보기</button>
+<body>
+  <section class="section01"></section>
+  <section class="section02"></section>
+  <section class="section03">
+    <ul class="projectList">
+      <li>
+        <figure>
+          <img src="element.jpg" alt="추가전 내용" />
+        </figure>
+        <h2>추가전 내용</h2>
+        <p>추가전 내용</p>
+        <a href="">링크 이동</a>
+      </li>
+      <li>
+        <figure>
+          <img src="element.jpg" alt="추가전 내용" />
+        </figure>
+        <h2>추가전 내용</h2>
+        <p>추가전 내용</p>
+        <a href="">링크 이동</a>
+      </li>
+    </ul>
+    <button type="button" id="addBtn">더보기</button>
+  </section>
 
-    </section>
-
-    <section class="section04">
-      <div class="contactForm">
-        <form
-          id="emailForm"
-          class="gform"
-          method="POST"
-          action="https://script.google.com/macros/s/AKfycbxO5vlJUOa9UoljaKBxmeVAsC-uG9cugK0NHG8zApDyd642wZEtn5wGTdLK1v2pad0axg/exec"
-        >
-          <input
-            type="text"
-            class="form-control"
-            id="senderEmail"
-            name="senderEmail"
-            placeholder="Your Email"
-            required
-          />
-          <input
-            type="text"
-            class="form-control"
-            id="senderName"
-            name="senderName"
-            placeholder="Your Name"
-            required
-          />
-          <textarea
-            class="form-control"
-            id="message"
-            name="message"
-            rows="5"
-            placeholder="Your Message"
-          ></textarea>
+  <section class="section04">
+    <div class="contactForm">
+      <form id="emailForm" class="gform" method="POST"
+        action="https://script.google.com/macros/s/AKfycbxO5vlJUOa9UoljaKBxmeVAsC-uG9cugK0NHG8zApDyd642wZEtn5wGTdLK1v2pad0axg/exec">
+        <input type="text" class="form-control" id="senderEmail" name="senderEmail" placeholder="Your Email" required />
+        <input type="text" class="form-control" id="senderName" name="senderName" placeholder="Your Name" required />
+        <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your Message"></textarea>
 
         <script type="text/javascript">
           (function () {
