--- a/test01/index.html
+++ b/test01/index.html
@@ -28,25 +28,43 @@
   <section class="section01"></section>
   <section class="section02"></section>
   <section class="section03">
-    <ul class="projectList">
-      <li>
-        <figure>
-          <img src="element.jpg" alt="추가전 내용" />
-        </figure>
-        <h2>추가전 내용</h2>
-        <p>추가전 내용</p>
-        <a href="">링크 이동</a>
-      </li>
-      <li>
-        <figure>
-          <img src="element.jpg" alt="추가전 내용" />
-        </figure>
-        <h2>추가전 내용</h2>
-        <p>추가전 내용</p>
-        <a href="">링크 이동</a>
-      </li>
-    </ul>
-    <button type="button" id="addBtn">더보기</button>
+    <div class="inner">
+      <ul class="projectList">
+        <li>
+          <figure>
+            <img src="./common/img/main_sec03_img01.jpg" alt="AMPK" />
+          </figure>
+          <h2> AMPK</h2>
+          <p>추가전 내용</p>
+          <a href="">링크 이동</a>
+        </li>
+        <li>
+          <figure>
+            <img src="./common/img/main_sec03_img02.jpg" alt="평택21세기병원" />
+          </figure>
+          <h2>평택21세기병원</h2>
+          <p>추가전 내용</p>
+          <a href="">링크 이동</a>
+        </li>
+        <li>
+          <figure>
+            <img src="./common/img/main_sec03_img03.jpg" alt="디스크닥터" />
+          </figure>
+          <h2>디스크닥터</h2>
+          <p>추가전 내용</p>
+          <a href="">링크 이동</a>
+        </li>
+        <li>
+          <figure>
+            <img src="./common/img/main_sec03_img04.jpg" alt="스튜디오아이엠" />
+          </figure>
+          <h2>스튜디오아이엠</h2>
+          <p>추가전 내용</p>
+          <a href="">링크 이동</a>
+        </li>
+      </ul>
+      <button type="button" id="addBtn">더보기</button>
+    </div>
   </section>
 
   <section class="section04">
@@ -57,131 +75,6 @@
         <input type="text" class="form-control" id="senderName" name="senderName" placeholder="Your Name" required />
         <textarea class="form-control" id="message" name="message" rows="5" placeholder="Your Message"></textarea>
 
-        <script type="text/javascript">
-          (function () {
-            // get all data in form and return object
-            function getFormData(form) {
-              var elements = form.elements;
-              var honeypot;
-
-              var fields = Object.keys(elements)
-                .filter(function (k) {
-                  if (elements[k].name === "honeypot") {
-                    honeypot = elements[k].value;
-                    return false;
-                  }
-                  return true;
-                })
-                .map(function (k) {
-                  if (elements[k].name !== undefined) {
-                    return elements[k].name;
-                    // special case for Edge's html collection
-                  } else if (elements[k].length > 0) {
-                    return elements[k].item(0).name;
-                  }
-                })
-                .filter(function (item, pos, self) {
-                  return self.indexOf(item) == pos && item;
-                });
-
-              var formData = {};
-              fields.forEach(function (name) {
-                var element = elements[name];
-
-                // singular form elements just have one value
-                formData[name] = element.value;
-
-                // when our element has multiple items, get their values
-                if (element.length) {
-                  var data = [];
-                  for (var i = 0; i < element.length; i++) {
-                    var item = element.item(i);
-                    if (item.checked || item.selected) {
-                      data.push(item.value);
-                    }
-                  }
-                  formData[name] = data.join(", ");
-                }
-              });
-
-              // add form-specific values into the data
-              formData.formDataNameOrder = JSON.stringify(fields);
-              formData.formGoogleSheetName =
-                form.dataset.sheet || "responses"; // default sheet name
-              formData.formGoogleSendEmail = form.dataset.email || ""; // no email by default
-
-              return {
-                data: formData,
-                honeypot: honeypot,
-              };
-            }
-
-            function handleFormSubmit(event) {
-              // handles form submit without any jquery
-              event.preventDefault(); // we are submitting via xhr below
-              var form = event.target;
-              var formData = getFormData(form);
-              var data = formData.data;
-
-              // If a honeypot field is filled, assume it was done so by a spam bot.
-              if (formData.honeypot) {
-                return false;
-              }
-
-              disableAllButtons(form);
-              var url = form.action;
-              var xhr = new XMLHttpRequest();
-              xhr.open("POST", url);
-              // xhr.withCredentials = true;
-              xhr.setRequestHeader(
-                "Content-Type",
-                "application/x-www-form-urlencoded"
-              );
-              xhr.onreadystatechange = function () {
-                if (xhr.readyState === 4 && xhr.status === 200) {
-                  form.reset();
-                  var formElements = form.querySelector(".form-elements");
-                  if (formElements) {
-                    formElements.style.display = "none"; // hide form
-                  }
-                  var thankYouMessage =
-                    form.querySelector(".thankyou_message");
-                  if (thankYouMessage) {
-                    thankYouMessage.style.display = "block";
-                    alert(
-                      "메일 전송에 성공했습니다. 확인 후 회신드리겠습니다."
-                    );
-                  }
-                }
-              };
-              // url encode form data for sending as post data
-              var encoded = Object.keys(data)
-                .map(function (k) {
-                  return (
-                    encodeURIComponent(k) + "=" + encodeURIComponent(data[k])
-                  );
-                })
-                .join("&");
-              xhr.send(encoded);
-            }
-
-            function loaded() {
-              // bind to the submit event of our form
-              var forms = document.querySelectorAll("form.gform");
-              for (var i = 0; i < forms.length; i++) {
-                forms[i].addEventListener("submit", handleFormSubmit, false);
-              }
-            }
-            document.addEventListener("DOMContentLoaded", loaded, false);
-
-            function disableAllButtons(form) {
-              var buttons = form.querySelectorAll("button");
-              for (var i = 0; i < buttons.length; i++) {
-                buttons[i].disabled = true;
-              }
-            }
-          })();
-        </script>
         <button id="btnSubmit" class="btn-submit mt-2">Send Message</button>
         <div style="display: none" class="thankyou_message">
           <h2>
