--- a/test01/index.html
+++ b/test01/index.html
@@ -31,41 +31,62 @@
     <div class="inner">
       <ul class="projectList">
         <li>
-          <figure>
-            <img src="./common/img/main_sec03_img01.jpg" alt="AMPK" />
-          </figure>
-          <h2> AMPK</h2>
-          <p>추가전 내용</p>
-          <a href="">링크 이동</a>
+          <a href="javascript:void(0)" data-src="http://ampk.kr/" data-stext="AMPK" data-sdate="추가전 내용"
+            data-wpercent="퍼블리싱100%">
+            <figure>
+              <img src="./common/img/main_sec03_img01.jpg" alt="AMPK" />
+            </figure>
+            <h2>AMPK</h2>
+            <p>추가전 내용</p>
+          </a>
         </li>
         <li>
-          <figure>
-            <img src="./common/img/main_sec03_img02.jpg" alt="평택21세기병원" />
-          </figure>
-          <h2>평택21세기병원</h2>
-          <p>추가전 내용</p>
-          <a href="">링크 이동</a>
+          <a href="javascript:void(0)" data-src="http://pyeongtaek21c.com/" data-stext="평택21세기병원" data-sdate="추가전 내용"
+            data-wpercent="퍼블리싱80%">
+            <figure>
+              <img src="./common/img/main_sec03_img02.jpg" alt="평택21세기병원" />
+            </figure>
+            <h2>평택21세기병원</h2>
+            <p>추가전 내용</p>
+          </a>
         </li>
         <li>
-          <figure>
-            <img src="./common/img/main_sec03_img03.jpg" alt="디스크닥터" />
-          </figure>
-          <h2>디스크닥터</h2>
-          <p>추가전 내용</p>
-          <a href="">링크 이동</a>
+          <a href="javascript:void(0)" data-src="http://diskdr.co.kr/" data-stext="디스크닥터" data-sdate="추가전 내용" data-wpercent="퍼블리싱100%">
+            <figure>
+              <img src="./common/img/main_sec03_img03.jpg" alt="디스크닥터" />
+            </figure>
+            <h2>디스크닥터</h2>
+            <p>추가전 내용</p>
+          </a>
         </li>
         <li>
-          <figure>
-            <img src="./common/img/main_sec03_img04.jpg" alt="스튜디오아이엠" />
-          </figure>
-          <h2>스튜디오아이엠</h2>
-          <p>추가전 내용</p>
-          <a href="">링크 이동</a>
+          <a href="javascript:void(0)" data-src="http://www.studioiam.co.kr/" data-stext="스튜디오아이엠" data-sdate="추가전 내용" data-wpercent="퍼블리싱100%">
+            <figure>
+              <img src="./common/img/main_sec03_img04.jpg" alt="스튜디오아이엠" />
+            </figure>
+            <h2>스튜디오아이엠</h2>
+            <p>추가전 내용</p>
+          </a>
         </li>
       </ul>
       <button type="button" id="addBtn">더보기</button>
     </div>
   </section>
+
+  <div class="pop_wrap">
+    <!-- //[D]활성 : on 클래스 추가 , body에 pop_on 클래스 추가 -->
+    <div class="pop_inwrap">
+      <div class="head">
+        <h2 class="tit"></h2>
+        <h5 class="percent"></h5>
+        <a href="" class="goWebsite" target="_blank">View Website</a>
+        <p><span class="tdate"></span></p>
+      </div><!-- //head -->
+      <div class="popbody">
+      </div><!-- //body -->
+      <button type="button" class="ibtn_close"><span class="blind">닫기</span></button>
+    </div><!-- //pop_inwrap -->
+  </div><!-- //pop_wrap -->
 
   <section class="section04">
     <div class="contactForm">
