--- a/test01/index.html
+++ b/test01/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:image" content="./common/img/my_img.jpg">
   <title>포트폴리오01</title>
   <link rel="stylesheet" type="text/css" href="./common/css/common.css" />
 
