--- a/test01/index.html
+++ b/test01/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="권준희포트폴리오">
+    <meta property="og:type" content="website">
     <meta property="og:image" content="./common/img/my_img.jpg">
+    <meta property="og:description" content="권준희포트폴리오 공부합시다.">
   <title>포트폴리오01</title>
   <link rel="stylesheet" type="text/css" href="./common/css/common.css" />
 
